--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
 		"serve": "vite preview"
 	},
 	"dependencies": {
+		"@antv/g6": "^4.8.13",
 		"@element-plus/icons-vue": "^2.0.9",
 		"axios": "^0.27.2",
+		"dagre-d3": "^0.6.4",
 		"element-plus": "^2.2.14",
 		"md-editor-v3": "^2.2.1",
 		"pinia": "^2.0.20",
@@ -24,6 +26,7 @@
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^3.0.0",
 		"@vue/compiler-sfc": "^3.1.2",
+		"sass": "^1.62.1",
 		"typescript": "^4.6.4",
 		"unplugin-auto-import": "^0.11.2",
 		"unplugin-vue-components": "^0.22.4",
