feat:增加筛选和新数据

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "allowJs": true,// ts支持js
+    "allowJs": true// ts支持js
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts","src/**/*.vue", "src/main.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
