--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@antv/g6": "^4.8.13",
+		"@braid/vue-formulate": "^2.5.3",
 		"@element-plus/icons-vue": "^2.0.9",
 		"axios": "^0.27.2",
 		"dagre-d3": "^0.6.4",
