--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"axios": "^0.27.2",
 		"dagre-d3": "^0.6.4",
 		"element-plus": "^2.2.14",
+		"file-saver": "^2.0.5",
 		"md-editor-v3": "^2.2.1",
 		"pinia": "^2.0.20",
 		"vue": "^3.2.37",
