--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"@braid/vue-formulate": "^2.5.3",
 		"@element-plus/icons-vue": "^2.0.9",
 		"axios": "^0.27.2",
+		"d3-array": "^3.2.4",
 		"d3-quicktool": "^0.4.2",
 		"dagre-d3": "^0.6.4",
 		"element-plus": "^2.2.14",
 		"file-saver": "^2.0.5",
 		"md-editor-v3": "^2.2.1",
+		"npm-pack-all": "^1.12.7",
 		"pinia": "^2.0.20",
 		"vue": "^3.2.37",
 		"vue-cropperjs": "^5.0.0",
